<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_value"
            android:id="@+id/homeValueTV"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:clickable="true"
            android:hint="@string/home_value_hint"
            android:id="@+id/homeValue"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down_payment"
            android:id="@+id/downPaymentTV"
            android:layout_below="@id/homeValue"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/downPayment"
            android:clickable="true"
            android:longClickable="false"
            android:hint="@string/down_payment_hint"
            android:layout_below="@+id/homeValue"
            android:layout_alignLeft="@+id/homeValue"
            android:layout_alignStart="@+id/homeValue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interest_rate"
            android:id="@+id/interestRateTV"
            android:layout_below="@id/downPayment"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/interestRate"
            android:clickable="true"
            android:longClickable="false"
            android:hint="@string/interest_rate_hint"
            android:layout_below="@id/downPayment"
            android:layout_alignLeft="@+id/downPayment"
            android:layout_alignStart="@+id/downPayment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:id="@+id/termsTV"
            android:layout_below="@id/interestRate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/terms"
            android:entries="@array/terms_list"
            android:layout_below="@+id/interestRate"
            android:layout_alignLeft="@+id/interestRate"
            android:layout_alignStart="@+id/interestRate"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/property_tax_rate"
            android:id="@+id/propTaxRateTV"
            android:layout_below="@id/terms"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/propTaxRate"
            android:clickable="true"
            android:longClickable="false"
            android:hint="@string/property_tax_rate_hint"
            android:layout_below="@+id/terms"
            android:layout_alignLeft="@+id/terms"
            android:layout_alignStart="@+id/terms"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_calculate"
            android:id="@+id/btnCalculate"
            android:layout_below="@+id/propTaxRate"
            android:layout_toRightOf="@+id/homeValueTV"
            android:layout_toEndOf="@+id/homeValueTV"
            android:layout_marginTop="20dp"
            android:onClick="calculateMortgage"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/paymentHeader"
            android:layout_below="@+id/btnCalculate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalTaxPaid"
            android:layout_below="@+id/paymentHeader"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalInterestPaid"
            android:layout_below="@+id/totalTaxPaid"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/monthlyPayment"
            android:layout_below="@+id/totalInterestPaid"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/payOffDate"
            android:layout_below="@+id/monthlyPayment"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>
</ScrollView>
